Runnable on local. It's ok to create a product via HTTP request.

--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -2,17 +2,17 @@ spring:
   application:
     name: order-service
   datasource:
-    url: jdbc:mysql://localhost:3306/distibuted_txn?useSSL=false
-    username: root
-    password: root
+    url: jdbc:mysql://localhost:3306/distibuted_txn?allowPublicKeyRetrieval=true&useSSL=false
+    username: admin
+    password: admin
   jpa:
-    database-platform: org.hibernate.dialect.MySQLDialect
+    database-platform: org.hibernate.dialect.MySQL5Dialect
     hibernate.ddl-auto: update
   rabbitmq:
     host: localhost
     port: 5672
-    username: guest
-    password: guest
+    username: admin
+    password: admin
 
 server:
   port: 8081
