--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -3,16 +3,16 @@ spring:
     name: account-service
   datasource:
     url: jdbc:mysql://localhost:3306/distibuted_txn?useSSL=false
-    username: root
-    password: root
+    username: admin
+    password: admin
   jpa:
-    database-platform: org.hibernate.dialect.MySQLDialect
+    database-platform: org.hibernate.dialect.MySQL5Dialect
     hibernate.ddl-auto: update
   rabbitmq:
     host: localhost
     port: 5672
-    username: guest
-    password: guest
+    username: admin
+    password: admin
 server:
   port: 8080
   
