--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: account-service
   datasource:
-    url: jdbc:mysql://localhost:3306/distibuted_txn?useSSL=false
+    url: jdbc:mysql://localhost:3306/account?useSSL=false
     username: admin
     password: admin
   jpa:
