--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: order-service
   datasource:
-    url: jdbc:mysql://localhost:3306/distibuted_txn?allowPublicKeyRetrieval=true&useSSL=false
+    url: jdbc:mysql://localhost:3306/order?allowPublicKeyRetrieval=true&useSSL=false
     username: admin
     password: admin
   jpa:
