--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: product-service
   datasource:
-    url: jdbc:mysql://localhost:3306/distibuted_txn?useSSL=false
+    url: jdbc:mysql://localhost:3306/product?useSSL=false
     username: admin
     password: admin
   jpa:
